index: use relative urls

--- a/index.njk
+++ b/index.njk
@@ -21,14 +21,14 @@
     <title>Open Pixel Art by Twilio</title>
     <link rel="shortcut icon" href="https://www.twilio.com/marketing/bundles/marketing/img/favicons/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="/assets/nes.css/nes.min.css" rel="stylesheet"/>
+    <link href="assets/nes.css/nes.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="styles/main.css"/>
-    <script src="/assets/javascript/name-hover.js"></script>
+    <script src="assets/javascript/name-hover.js"></script>
   </head>
   <body>
     <header>
       <hgroup>
-        <h1><img class="logo" src="/assets/open-pixel-art-logo.svg" alt="Open Pixel Art by Twilio"/></h1>
+        <h1><img class="logo" src="assets/open-pixel-art-logo.svg" alt="Open Pixel Art by Twilio"/></h1>
       </hgroup>
       <nav>
         <ul class="nav-list">
@@ -196,7 +196,7 @@
           <i class="nes-icon github" aria-hidden="true"></i>
         </a>
         <a class="external-link" href="https://www.twilio.com/labs?utm_source=hacktoberfest19&utm_campaign=hacktoberfest19" target="_blank" rel="noreferrer" aria-label="Check Twilio's Featured Projects for Contribution">
-          <img src="/assets/twilioBug.svg" alt="pixelated Twilio logo" class="twilio-pixel"/>
+          <img src="assets/twilioBug.svg" alt="pixelated Twilio logo" class="twilio-pixel"/>
         </a>
         <a class="external-link" href="https://www.facebook.com/TeamTwilio/" target="_blank" rel="noreferrer" aria-label="Check twilio facebook account">
           <i class="nes-icon facebook" aria-hidden="true"></i>
@@ -213,7 +213,7 @@
         with and for the community.</a>
       <p></footer>
 
-    <script src="/assets/javascript/party-mode.js"></script>
+    <script src="assets/javascript/party-mode.js"></script>
 
     </body>
   </html>
