Update index and add sed logo

--- a/index.njk
+++ b/index.njk
@@ -28,7 +28,7 @@
   <body>
     <header>
       <hgroup>
-        <h1><img class="logo" src="assets/open-pixel-art-logo.svg" alt="Open Pixel Art by Twilio"/></h1>
+        <h1><img class="logo" src="assets/sec-logo.png" alt="Open Pixel Art by Twilio"/></h1>
       </hgroup>
       <nav>
         <ul class="nav-list">
