Update Download Link and Text
The previous download link doesn't work.

--- a/index.njk
+++ b/index.njk
@@ -175,7 +175,7 @@
           <i class="nes-octocat" aria-hidden="true"></i>
         </p>
         <p class="text-center">
-          <a class="nes-btn is-primary external-link" href="https://www.twilio.com/quest/download" target="_blank" rel="noreferrer" >Download TwilioQuest</a>
+          <a class="nes-btn is-primary external-link" href="https://github.com/diu-sec/terminalquest/releases" target="_blank" rel="noreferrer" >Download TerminalQuest</a>
           <a class="nes-btn external-link" href="https://github.com/diu-sec/open-pixel-art-diu/blob/master/CONTRIBUTING.md" target="_blank" rel="noreferrer" >Check out the Contributing Guide</a>
         </p>
       </section>
